used for-each loop instead of older for-loop